Prevent Angular flicker with ng-cloak

--- a/ext/src/override/style/style.scss
+++ b/ext/src/override/style/style.scss
@@ -6,3 +6,7 @@
 body {
 	padding: 50px 100px;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
